# aws-exam-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  README.md  WORK_LOG.md  pyproject.toml
.github/workflows/: quality-check.yml
.kiro/hooks/: python-quality-check.kiro.hook  save-work-log.kiro.hook
.kiro/settings/: mcp.json
.kiro/specs/aws-exam-agent/: design.md  requirements.md  tasks.md
.kiro/specs/aws-exam-agent/design/: 01-overview.md  02-architecture.md  03-ai-engine.md  04-teams-integration.md  05-data-models.md  06-deployment.md  07-error-handling.md  08-testing.md  09-decisions.md
.kiro/steering/: agile-development-principles.md  core-value-first-approach.md  design-documentation-principles.md  development-environment-standards.md  project-context.md  python-coding-standards.md  task-completion-standards.md  task-management-standards.md  test-design-standards.md  type-safety-standards.md  typescript-coding-standards.md  work-log-reference.md
app/: __init__.py  test_client.py
app/agentcore/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  __init__.py  agent_main.py  agent_sample.py  domain_memory_client.py  requirements.txt  teams_client.py
app/agentcore/docker/: __init__.py  agent_main.py  requirements.txt
app/agentcore/docker/agents/: __init__.py
app/agentcore/exam_resources/: AWS-SAP-samples.md
app/agentcore/mcp/: __init__.py  client.py
app/lambda/: __init__.py
app/lambda/trigger/: buildspec.yml
app/mcp/: __init__.py  client.py
app/models/: __init__.py  base.py  delivery.py  question.py  system_settings.py  user_response.py
app/repositories/: __init__.py  base.py  delivery_repository.py  dynamodb_client.py  question_repository.py  user_response_repository.py
app/services/: bedrock_client.py  mock_bedrock_client.py
app/shared/: __init__.py  config.py  constants.py  exceptions.py
app/trigger/: buildspec.yml  lambda_function.py  requirements.txt
data/exam_guides/: AWS-SAP-C02.md
docs/: README.md  agentcore-deployment-guide.md  agentcore-operations-guide.md  agentcore-troubleshooting-methodology.md  cost-guide.md  deployment-guide.md  environment-variables-guide.md  eventbridge-scheduler-deployment.md  operations-guide.md  quickstart-guide.md  security-guide.md  setup-guide.md  step-functions-implementation-guide.md  teams-integration-setup.md  testing-guide.md  troubleshooting-guide.md
infrastructure/: agentcore-resources.yaml  dynamodb-tables.yaml  eventbridge-scheduler.yaml  parameters-development.json
scripts/: build-lambda.sh  cleanup-source-resources.sh  create_agentcore_memory.py  deploy-agentcore-resources.sh  deploy-agentcore.sh  deploy-eventbridge-scheduler.sh  get-agentcore-arn.sh  infrastructure-quality-check.sh  manage-agentcore-memory.sh  python-quality-check.sh  setup-dev.sh  setup-memory-permissions.sh  show-agentcore-logs.sh  test-agentcore.sh  test-agents.sh  test-lambda.sh
scripts/agentcore_memory/: README.md  create_agentcore_memory.py  delete_old_agentcore_memory.py  list_agentcore_memories.py  manage.py
templates/teams/: adaptive_card.json
tests/: conftest.py
tests/integration/: test_agentcore_mcp.py  test_component_integration.py  test_concurrent_integration.py  test_config_integration.py  test_data_access.py  test_error_integration.py  test_marker_separation.py  test_mcp_integration.py  test_simple_integration.py
tests/unit/agentcore/: __init__.py  test_agent_main.py  test_domain_memory_client.py  test_teams_client.py
tests/unit/lambda/: __init__.py
tests/unit/lambda/trigger/: test_lambda_function.py
tests/unit/models/: __init__.py  test_base.py  test_delivery.py  test_question.py  test_system_settings.py  test_user_response.py
tests/unit/repositories/: __init__.py  test_base_repository.py  test_delivery_repository.py  test_dynamodb_client.py  test_question_repository.py  test_user_response_repository.py
tests/unit/shared/: test_agentcore_config.py  test_config.py  test_exceptions.py
tests/unit/test_shared/: test_constants.py
tests/unit/trigger/: __init__.py  test_lambda_function.py
