[project]
name = "aws-exam-agent"
version = "0.1.0"
description = "AI エージェントによる AWS 試験問題自動生成・配信システム"
authors = [
    {name = "kobank-t", email = "kobank.t@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    # AgentCore & Strands Agents (コア機能)
    "strands-agents>=1.3.0",
    "bedrock-agentcore>=0.1.1",
    # MCP (Model Context Protocol)
    "mcp>=1.12.0",
    # データモデル・バリデーション (Pydantic for structured output)
    "pydantic>=2.0.0",
    # AWS SDK (Bedrock用)
    "boto3>=1.34.0",
    "botocore>=1.34.0",
]

[tool.uv]
dev-dependencies = [
    # テスト (品質保証のため継続)
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    
    # リンター・フォーマッター
    "ruff>=0.1.0",
    
    # 型チェック
    "mypy>=1.5.0",
    
    # YAML品質管理 (AgentCore設定用)
    "yamllint>=1.32.0",
    
    # CloudFormation品質管理 (インフラ用)
    "cfn-lint>=0.83.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "N",  # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by formatter
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
filterwarnings = [
    # botocore内部でdatetime.utcnow()の非推奨警告が発生する問題を抑制
    "ignore::DeprecationWarning:botocore.auth",
    "ignore::pytest.PytestCollectionWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow running tests",
]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false  # @toolデコレータ対応
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "strands.*",
    "bedrock_agentcore.*",
    "mcp.*",
    "boto3.*",
    "botocore.*",
    # テスト用ライブラリ (型スタブなし)
    "moto.*",
    "freezegun.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
